[package]
name = "iot-monads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
rumqttc = "0.23.0"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
lazy_static = { version = "1.4.0", features = [] }
bytes = "1.5.0"